--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
     "normalize-url": "^5.0.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
